Update Exploring the 2017 Ford GoBike Trip Dataset with Pyspark.ipynb

--- a/Exploring the 2017 Ford GoBike Trip Dataset with Pyspark.ipynb
+++ b/Exploring the 2017 Ford GoBike Trip Dataset with Pyspark.ipynb
@@ -5,7 +5,7 @@
    "id": "590541f1",
    "metadata": {},
    "source": [
-    "# <center> Pyspark presentation \n"
+    "# <center> Exploring the 2017 Ford GoBike Trip Data with PySpark \n"
    ]
   },
   {
@@ -13,42 +13,31 @@
    "id": "e3234a96",
    "metadata": {},
    "source": [
-    "# $\\color{red}{\\text{Tasks for first week:}}$\n",
+    "# $\\color{red}{\\text{Content Outline:}}$\n",
     "\n",
     " ## 1-calculate distance of each trip using haversine library and add the result to the dataset\n",
     " ## 2-calculate the duration in seconds of each trip\n",
-    " ## 3-by assuming each minute cost 0.35 cent calculate the fee for each trip"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88cfdce1",
-   "metadata": {},
-   "source": [
-    "# $\\color{red}{\\text{Tasks for second week :}}$\n",
-    " ## 1-calculate the total distance for each bike and list the top 10\n",
-    " ## 2-calculate the number of trips for each start station list top 10 and find the ratio of using as male or female\n",
-    " ## 3-make a comparison to find the percentage of usage for customer and subscriber\n",
-    " ## 4-calculate the age of all users and show the relation between the distance and the age"
+    " ## 3-by assuming each minute cost 0.35 cent calculate the fee for each trip\n",
+    " ## 4-calculate the total distance for each bike and list the top 10\n",
+    " ## 5-calculate the number of trips for each start station list top 10 and find the ratio of using as male or female\n",
+    " ## 6-make a comparison to find the percentage of usage for customer and subscriber\n",
+    " ## 7-calculate the age of all users and show the relation between the distance and the age\n",
+    " ## 8-calculate the total cost for all customers and all subscribers\n",
+    " ## 9- what is the ratio of payment using cc or app wallet\n",
+    " ## 10-what is the preferred way to pay for customers and subscriber"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cabaf8e1",
    "metadata": {},
-   "source": [
-    "# $\\color{red}{\\text{Tasks for third week :}}$ \n",
-    " ## 1-calculate the total cost for all customers and all subscribers\n",
-    " ## 2- what is the ratio of payment using cc or app wallet\n",
-    " ## 3-what is the preferred way to pay for customers and subscriber"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "d13d9a20",
    "metadata": {},
    "source": [
-    "Ideas for presentaion :\n",
     "\n"
    ]
   },
@@ -62,20 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8f52f72d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import urllib.request\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import sqrt\n",
+    "\n",
+    "# Download the CSV file from the remote URL\n",
+    "url = \"https://raw.githubusercontent.com/srjlsd/Exploring-the-2017-Ford-GoBike-Trip-Data-with-PySpark/15ccf0249d3da47c41400ca1cd6c092c308b6287/2017-fordgobike-trip-data.csv\"\n",
+    "local_path = \"2017-fordgobike-trip-data.csv\"\n",
+    "urllib.request.urlretrieve(url, local_path)\n",
+    "\n",
+    "# Initialize the SparkSession\n",
     "spark = SparkSession.builder.appName(\"MyApp\").getOrCreate()\n",
-    "df = spark.read.csv(r'E:\\Learning Pandas\\Data_Manupilation\\2017-fordgobike-tripdata.csv', header=True, inferSchema=True)\n"
+    "\n",
+    "# Read the CSV file using PySpark\n",
+    "df = spark.read.csv(local_path, header=True, inferSchema=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d3af5bf5",
    "metadata": {
     "scrolled": true
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "67ee5bc2",
    "metadata": {
     "scrolled": true
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "6e12528c",
    "metadata": {},
    "outputs": [
@@ -379,32 +379,6 @@
     "# Print the summary statistics\n",
     "print(trip_duration_stats)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bf12cd6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "172e8988",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "586003c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1197,14 +1171,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f77530d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "51281a84",
    "metadata": {},
@@ -1319,22 +1285,7 @@
    "id": "126d9aa9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "path = r'E:\\Learning Pandas\\Data_Manupilation\\2017-fordgobike-tripdata.csv'\n",
-    "\n",
-    "df1 = pd.read_csv(path)\n",
-    "\n",
-    "df1.sample(5)\n",
-    "df1.member_birth_year.dtype"
-   ]
+   "source": []
   }
  ],
  "metadata": {
